<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.olxapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_home_to_browse"
            app:destination="@+id/navigation_browse_category"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:popUpTo="@id/navigation_home"
            app:exitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpToInclusive="false"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_sell"
        android:name="com.example.olxapp.ui.sell.SellFragment"
        android:label="@string/title_sell"
        tools:layout="@layout/fragment_sell" >
        <action
            android:id="@+id/action_sell_to_include_details"
            app:destination="@+id/navigation_include_details"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpToInclusive="false"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_upload_photo"
        android:name="com.example.olxapp.ui.uploadPhoto.UploadPhotoFragment"
        android:label="@string/upload_photo"
        tools:layout="@layout/fragment_upload_photo" >
        <action
    android:id="@+id/action_photo_my_ads"
    app:destination="@+id/navigation_my_ads"
    app:enterAnim="@anim/nav_default_pop_enter_anim"
    app:popUpTo="@id/navigation_upload_photo"
    app:exitAnim="@anim/nav_default_pop_exit_anim"
    app:popUpToInclusive="false"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_include_details"
        android:name="com.example.olxapp.ui.includeDetails.IncludeDetailsFragment"
        android:label="@string/title_include_details"
        tools:layout="@layout/fragment_include_details" >
        <action
            android:id="@+id/action_details_photo_upload"
            app:destination="@+id/navigation_upload_photo"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:popUpTo="@id/navigation_include_details"
            app:exitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpToInclusive="false"/>
    </fragment>
    <fragment
        android:id="@+id/navigation_my_ads"
        android:name="com.example.olxapp.ui.myAds.MyAdsFragment"
        android:label="@string/title_My_ads"
        tools:layout="@layout/fragment_myads" >
        <action
            android:id="@+id/action_my_ads_to_details"
            app:destination="@+id/navigation_idetails"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:popUpTo="@id/navigation_my_ads"
            app:exitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpToInclusive="false"/>
    </fragment>
    <fragment
        android:id="@+id/navigation_browse_category"
        android:name="com.example.olxapp.ui.browseCategory.BrowseCategoryFragment"
        android:label="@string/title_browse"
        tools:layout="@layout/fragment_browse" >
        <action
            android:id="@+id/action_browse_to_details"
            app:destination="@+id/navigation_idetails"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:popUpTo="@id/navigation_browse_category"
            app:exitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpToInclusive="false"/>
    </fragment>
    <fragment
        android:id="@+id/navigation_idetails"
        android:name="com.example.olxapp.ui.details.DetailsFragment"
        android:label="@string/title_details"
        tools:layout="@layout/fragment_details" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.olxapp.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_settings_to_profile"
            app:destination="@+id/navigation_profile"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:popUpTo="@id/navigation_settings"
            app:exitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpToInclusive="true"/>


    </fragment>
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.olxapp.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profile_to_settings"
            app:destination="@+id/navigation_settings"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:popUpTo="@id/navigation_profile"
            app:exitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpToInclusive="false"/>

    </fragment>
</navigation>