<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <LinearLayout
                android:layout_width="394dp"
                android:layout_height="499dp"
                android:layout_margin="8sp"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="332dp"
                    android:layout_height="304dp"
                    android:layout_gravity="center"
                    android:background="@color/platinumw"
                    app:cardCornerRadius="4sp"
                    app:cardElevation="8dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:id="@+id/linearLayoutchoosephot"

                        android:layout_width="208dp"
                        android:layout_height="257dp"
                        android:layout_marginLeft="60dp"
                        android:background="@drawable/box_dashed_line2"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageviewchossephoto"
                            android:layout_width="50dp"
                            android:layout_height="37dp"
                            android:src="@drawable/camera"

                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="54dp"
                            android:gravity="center"
                            android:text="@string/choose_photo"
                            android:textColor="@color/black"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/reyclerview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="gone" />
                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="34dp"
                    android:layout_marginEnd="8dp"
                    android:background="@color/white">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="142dp"
                        android:gravity="center"
                        android:text="@string/upload"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal">

                <Button
                    android:id="@+id/uploadphotoPreview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20sp"
                    android:background="@color/black"
                    android:text="@string/preview"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/uploadphotoUpload"
                    android:layout_marginLeft="180sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/purple_500"
                    android:text="Upload"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

        </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>