<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/platinumw" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6sp"

                android:layout_marginEnd="6sp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edBrand"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="brand"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edYear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Year"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutKmdriven"
                    android:layout_width="match_parent"
                    android:visibility="gone"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edkmdrive"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Km_dirven"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:padding="10sp"
                    android:text="ad_title"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:padding="10sp"
                    android:text="@string/mention"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/edAdtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:padding="10sp"
                    android:text="@string/describe"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/edDescribe2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="6sp"
                    android:paddingEnd="6sp"
                    android:text="@string/features"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Price"
                        android:inputType="number" />
                </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edPhoneNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Phone Number"
                    android:inputType="phone" />
            </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edAddres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Address"
                android:inputType="textPostalAddress" />
        </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Required fields *"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textStyle="bold"/>
                <Button
                    android:layout_marginTop="3sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Next"
                    android:textStyle="bold"

                    android:id="@+id/includenextid"
                    android:textColor="@color/white"
                    android:background="@color/purple_500"
                    />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>






    </ScrollView>

</LinearLayout>